--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
     />
+    <link rel="stylesheet" href="https://newcss.net/theme/terminal.css" />
   </head>
   <body>
     <div id="root"></div>
